Add -proc:full option - remove warning