@@ -1331,6 +1331,7 @@ lazy val runtime = (project in file("engine/runtime"))
   )
   .settings(
     (Compile / javacOptions) ++= Seq(
+      "-proc:full",
       "-s",
       (Compile / sourceManaged).value.getAbsolutePath,
       "-Xlint:unchecked"
